# ArgosOS

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DISTRIBUTION.md  DISTRIBUTION_README.md  Dockerfile  Dockerfile.standalone  ELECTRON-INTEGRATION-SUMMARY.md  LICENSE  README.md  SECURITY.md  TESTING.md  TEST_SUMMARY.md  build-all-platforms.sh  build-distribution.sh  build-with-poetry.sh  create-distribution.sh  create-docker-app.py  create-standalone-app.py  debug_test.txt  docker-compose.yml  ingest_demo.py  main.py  pyproject.toml  requirements.txt  start-electron.bat  start-electron.sh  start-web.sh  test-electron-integration.py  test-electron-simple.py  test.txt  test_api_e2e.py  test_db.py  test_error.txt  test_frontend_e2e.py  test_ingest_fixes.py
ArgosOS/: .gitignore  alembic.ini  config.env.example  pytest.ini  requirements.txt  start.py  test_db.py  test_setup.py
ArgosOS/alembic/: env.py
ArgosOS/app/: __init__.py  config.py  main.py
ArgosOS/db/: __init__.py
ArgosOS/frontend/: package.json  (+1 more)
app/: constants.py  main.py
config/: api_keys.enc  secret.key
db/: engine.py  models.py
frontend/: README-ELECTRON.md  README.md  electron-builder-config.js  minimal-test.js  package-lock.json  package.json  simple-test.js  test-main.js
tests/: README.md  test_agents_comprehensive.py  test_api_endpoints.py  test_api_integration.py  test_documents.py  test_file_processing.py  test_files.py  test_ingest_agent.py  test_llm_mocks.py  test_postprocessor_agent.py  test_retrieval_agent.py  test_runner.py  test_search.py  test_security.py  test_simplified.py
(+69 files in other folders)
