[tool.poetry]
name = "argos-os"
version = "1.0.0"
description = "Intelligent file analysis and document management system"
authors = ["ArgosOS Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
pytesseract = "^0.3.10"
Pillow = "^10.0.0"
pdfminer-six = "^20221105"
python-docx = "^1.1.0"
openai = "^1.3.7"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
cryptography = "^41.0.0"
PyMuPDF = "^1.23.0"
docx2pdf = "^0.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python start.py"
